[package]
name = "wasm-canvas-test"
version = "0.1.0"
authors = ["github@lanesawyer.dev"]
edition = "2021"

# [lib]
# crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.59"
wasm-bindgen = "0.2.82"

[dependencies.web-sys]
version = "0.3.59"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  "console",
]